2014-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* v8Context.h:
	* v8X3DField.h:
	* v8Browser.cpp:
	* v8Context.cpp:
	* v8Globals.cpp:
	* v8X3DObject.h:
	* v8SFVec4.h:
	* jsContext.h:
	* v8X3DFieldDefinition.h: 

2014-06-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* v8Fields.h:
	* v8Context.h:
	* v8Context.cpp:
	* v8Browser.cpp:
	* v8Globals.cpp:
	* v8SFVec4.h:
	* v8SFVec4.cpp: 

2014-06-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* V8.cpp:
	* v8String.h:
	* v8Context.h:
	* v8Globals.h:
	* v8Browser.h:
	* SpiderMonkey.cpp:
	* v8Globals.cpp:
	* v8Browser.cpp:
	* v8Context.cpp:
	* Script.cpp:
	* jsError.h:
	* jsfield.h:
	* jsString.h:
	* jsBrowser.h:
	* jsContext.h:
	* jsError.cpp:
	* jsfield.cpp:
	* jsGlobals.h:
	* jsString.cpp:
	* jsX3DRoute.h:
	* jsX3DField.h:
	* jsX3DScene.h:
	* jsContext.cpp:
	* jsX3DObject.h:
	* jsGlobals.cpp:
	* jsBrowser.cpp:
	* jsRouteArray.h:
	* jsX3DField.cpp:
	* jsX3DRoute.cpp:
	* jsX3DScene.cpp:
	* jsConstArray.h:
	* X3DScriptingContext.h:
	* jsProfileInfo.h:
	* jsX3DObject.cpp:
	* jsRouteArray.cpp:
	* jsX3DConstants.h:
	* jsProfileInfo.cpp:
	* jsComponentInfo.h:
	* jsSFVec4.h:
	* jsMFTime.h:
	* jsMFBool.h:
	* X3DScriptingContext.cpp:
	* jsSFNode.h:
	* jsMFNode.h:
	* jsSFVec3.h:
	* jsSFVec2.h:
	* jsX3DArrayField.h:
	* jsMFInt32.h:
	* jsMFFloat.h:
	* jsX3DConstants.cpp:
	* jsSFColor.h:
	* jsSFImage.h:
	* jsSFVec4.cpp:
	* jsSFVec3.cpp:
	* jsX3DArrayField.cpp:
	* jsSFVec2.cpp:
	* jsMFTime.cpp:
	* jsSFNode.cpp:
	* jsMFDouble.h:
	* jsMFBool.cpp:
	* jsMFString.h:
	* jsMFNode.cpp:
	* jsComponentInfo.cpp:
	* jsMFFloat.cpp:
	* jsSFMatrix4.h:
	* jsMFInt32.cpp:
	* jsSFColor.cpp:
	* jsX3DScalar.h:
	* jsSFImage.cpp:
	* jsSFMatrix3.h:
	* jsProfileInfoArray.h:
	* jsSFRotation.h:
	* jsMFDouble.cpp:
	* jsMFString.cpp:
	* jsX3DFieldDefinition.h:
	* jsSFMatrix4.cpp:
	* jsSFMatrix3.cpp:
	* jsSFColorRGBA.h:
	* jsProfileInfoArray.cpp:
	* jsComponentInfoArray.h: